--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,102 @@
 {
   "cSpell.words": [
+    "abspath",
+    "anonfun",
+    "asarray",
+    "attriblist",
+    "borderaxespad",
+    "cbar",
+    "chdir",
+    "cmap",
+    "colorbar",
+    "coolwarm",
+    "danielvartan",
+    "darkgray",
+    "dataframe",
+    "divmod",
+    "DSDM",
+    "elif",
+    "Femto",
+    "fileformat",
+    "fontsize",
+    "getcwd",
+    "histplot",
+    "hspace",
+    "initargs",
+    "ipykernel",
+    "ipyparallel",
+    "itertools",
+    "kwargs",
     "libjli",
+    "lightbox",
+    "linspace",
+    "lview",
     "matplotlib",
+    "modelfile",
+    "nans",
+    "nbclient",
+    "nbformat",
+    "ncol",
+    "ndarray",
     "netlogo",
+    "nlogo",
+    "nlogox",
+    "nrow",
+    "numpy",
+    "openpyxl",
+    "pearsonr",
+    "pxcor",
+    "pycor",
     "pynetlogo",
     "pyplot",
+    "pyyaml",
+    "regplot",
+    "scipy",
     "seaborn",
-    "venv"
-  ]
+    "sharey",
+    "smax",
+    "smin",
+    "Sobol",
+    "sobolsample",
+    "ticklocs",
+    "toolkits",
+    "Vartanian",
+    "venv",
+    "whitegrid",
+    "wspace",
+    "xcor",
+    "xdescent",
+    "xlabel",
+    "xticklabels",
+    "xticks",
+    "xycoords",
+    "yaxis",
+    "ycor",
+    "ydescent",
+    "yerr",
+    "ylabel",
+    "ylim",
+    "yticklabels",
+    "zorder"
+  ],
+  "workbench.colorCustomizations": {
+    "activityBar.activeBackground": "#fe3d2c",
+    "activityBar.background": "#fe3d2c",
+    "activityBar.foreground": "#e7e7e7",
+    "activityBar.inactiveForeground": "#e7e7e799",
+    "activityBarBadge.background": "#005f08",
+    "activityBarBadge.foreground": "#e7e7e7",
+    "commandCenter.border": "#e7e7e799",
+    "sash.hoverBorder": "#fe3d2c",
+    "statusBar.background": "#f61501",
+    "statusBar.foreground": "#e7e7e7",
+    "statusBarItem.hoverBackground": "#fe3d2c",
+    "statusBarItem.remoteBackground": "#f61501",
+    "statusBarItem.remoteForeground": "#e7e7e7",
+    "titleBar.activeBackground": "#f61501",
+    "titleBar.activeForeground": "#e7e7e7",
+    "titleBar.inactiveBackground": "#f6150199",
+    "titleBar.inactiveForeground": "#e7e7e799"
+  },
+  "peacock.color": "f61501"
 }
